# Pinnacle-Ai

./: .env.live.safe  .gitignore  ADVANCED_FEATURES_COMPLETE.md  ADVANCED_FEATURES_IMPLEMENTATION.md  ADVANCED_UPGRADES.md  ALL_UPGRADES_COMPLETE.md  BLOG_POST_TEMPLATE.md  BLOG_POST_TRAINING.md  CHANGELOG.md  CHANGELOG_PINNACLE.md  COMMUNITY.md  COMPLETE_ADVANCED_SYSTEM.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_NEUROSYMBOLIC_SUMMARY.md  COMPLETE_OVERHAUL_GUIDE.md  COMPREHENSIVE_IMPROVEMENTS_COMPLETE.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.pinnacle  Dockerfile.production  FINAL_ADVANCED_IMPLEMENTATION.md  FINAL_UPGRADES_SUMMARY.md  FIXES_APPLIED_SUMMARY.md  GITHUB_SETUP.md  GITHUB_SETUP_CHECKLIST.md  GOD_AI_COMPLETE.md  GOD_AI_README.md  HARDWARE_INTEGRATION_COMPLETE.md  HFT_UPGRADES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_UPGRADE_GUIDE.md  MINI_GPT_IMPROVEMENTS.md  NEUROSYMBOLIC_IMPLEMENTATION.md  (+51 more)
.github/: PULL_REQUEST_TEMPLATE.md
agents/: arbitrage_agent.py  execution_agent.py  long_term_agent.py  loss_cluster_supervisor.py  market_data.py  meta_controller.py  multi_venue_book_agent.py  portfolio_agent.py  research_agent.py  risk_agent.py  router_agent.py  short_term_agent.py
ai_engine/: __init__.py  ai_client.py  ai_client_v2.py  code_collector.py  config.py  deploy.py  inference_server.py  run_ai_cycle.py
analytics/: backtest_engine.py  microstructure.py  risk_overlays.py  scorecard.py
app/: advanced_dashboard.py  gradio_demo.py
config/: agents.yaml  exchanges.yaml  reports.yaml  settings.yaml.example  ultimate.json
core/: allocator.py  app.py  config_watcher.py  global_state.py  live_metrics.py  loss_cluster.py  low_latency.py  multi_agent_system.py  omega_brain.py  policy.py  portfolio_optimizer.py  quantum_infrastructure.py  runtime.py  self_evolving_engine.py  self_healing.py  state.py  strategy_switcher.py
dashboard/: app.py
data/: example_dataset.jsonl  news_analyzer.py  social_media.py
docs/: agents.md  api_reference.md  architecture.md  examples.md  setup.md  training_guide.md  usage.md
examples/: agent_demo.py  basic_usage.py  interactive_demo.py  llm_usage_example.py  phase1_examples.py  (+5 more)
(+358 files in other folders)
