[project]
name = "kraken-ml-bot-v200E"
version = "200.0.0"
description = "Multi-agent, trend/volatility-aware Kraken ML trading bot (v200E dry-run edition)"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
