[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinnacle-ai"
version = "0.1.0"
description = "The Absolute Pinnacle of Artificial Intelligence"
readme = "README_PINNACLE_AI.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Pinnacle AI Team", email = "team@pinnacle-ai.com"}
]
keywords = ["ai", "artificial-intelligence", "neurosymbolic", "multi-agent", "agi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PyYAML>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "mypy>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/ToxicSpawn/Pinnacle-AI"
Documentation = "https://github.com/ToxicSpawn/Pinnacle-AI/docs"
Repository = "https://github.com/ToxicSpawn/Pinnacle-AI"
Issues = "https://github.com/ToxicSpawn/Pinnacle-AI/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
